Implement ping for worker
